welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:22: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:25: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:28: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:31: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:34: error: Unmatched closing brace '}' ignored here
}
^